tests/errors/record_redundant_err/record_redundant_err.c
#error record_redundant_err.record_redundant_err:6:37 The field 'Z' is redundant for record 'Point'.
